Add edit profile, users dashboard, rankings and role superadmin
